# libsocket

./: .cproject  .gitignore  .project  Android.mk  CMakeLists.txt  LICENSE.txt  README.md  README.txt  TCPStream.cc  Test  UDPNode  address.cpp  build-win10ARM.sh  build-win10x64.sh  build-win10x86.sh  build-win32.sh  build-win8.1ARM.sh  build-win8.1x86.sh  buildLinux.sh  buildOSX.sh  clean.sh  client.cpp  commit.sh  connection.cpp  libsocket.dylib  makefile  node.cpp  readme.md  readme.txt  server.cpp  setup.sh  socket.c  socket.cpp  socket.h  socket_Export.h  tcpconnetor.cc  tcpconnetor.h  tcpstream.cc  tcpstream.h  test.cpp
include/: socket.h  socket_Export.h
include/windows/: socket_Export.h
lib/ARM/: socket.exp  socket.ilk  socket.lib
lib/Debug/: socket.exp  socket.ilk  socket.lib
lib/win10ARM/: socket.exp  socket.lib  socket.pri
lib/win10x64/: socket.ilk
lib/win10x86/: socket.exp  socket.ilk  socket.lib
lib/win32/: socket.exp  socket.ilk  socket.lib
lib/win8.1x86/: socket.exp  socket.lib  socket.pri
lib/x64/: socket.exp  socket.lib
libs/: libsocket.dylib
src/: node.cpp  socket.c
